--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
     <link rel="stylesheet" href="./styles/style.css">
+    
 </head>
 <body>
-    
+    <header>
+        <nav class="navegacion">
+            <ul>
+                <li> <a href="#">Inicio</a></li>
+                <li> <a href="./pages/Contacto.html">Contacto</a></li>
+                <li> <a href="./pages/Productos.html">Productos</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
 
