--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
 
-
-    <script src="./index.js"></script>
+    <script src="./js/navegacion.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
