--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -10,7 +10,6 @@
     
 <h1>Productos</h1>
 
-
-    <script src="/index.js"></script>
+    <script src="../js/navegacion.js"></script>
 </body>
 </html>
